# Gravtory

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION.md  Makefile  PRODUCTION.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  gravtory.db-shm  gravtory.db-wal  mkdocs.yml  pyproject.toml  requirements-lock.txt
.github/: BRANCH_PROTECTION.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: run_benchmarks.py
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml
design/: dashboard-redesign-plan.md  tech-debt.md
docs/: DOCSTRING_STYLE.md  MUTATION_TESTING.md  USAGE.md  changelog.md  contributing.md  index.md
docs/adr/: 001-checkpoint-header-format.md  002-backend-abstraction.md  003-saga-compensation-strategy.md  004-serializer-selection.md  005-signal-transport-design.md  README.md
docs/advanced/: architecture.md  encryption.md  performance.md
docs/api/: backend.md  decorators.md  errors.md  gravtory.md  openapi.yaml  testing.md  types.md
docs/backends/: mongodb.md  mysql.md  overview.md  postgresql.md  redis.md  sqlite.md
docs/contributing/: branching-strategy.md
docs/getting-started/: concepts.md  configuration.md  installation.md  quickstart.md
docs/guides/: ai-ml.md  cli.md  conditions.md  dashboard.md  distribution.md  dynamic-workflows.md  observability.md  parallel.md  retry.md  sagas.md  scheduling.md  signals.md  steps.md  testing.md  troubleshooting.md  workflows.md
docs/migration/: celery.md  dbos.md  temporal.md
examples/: README.md
examples/ai-agent/: README.md  main.py
examples/approval-workflow/: README.md  api.py  main.py
examples/etl-pipeline/: README.md  main.py
examples/order-processing/: README.md  main.py
examples/scheduled-reports/: README.md  main.py
scripts/: build.bat  build.sh  dev-setup.bat  dev-setup.sh  release.bat  release.sh
src/gravtory/: __init__.py  _version.py
src/gravtory/ai/: __init__.py  agents.py  fallback.py  llm_step.py  prompts.py  streaming.py  tokens.py
src/gravtory/backends/: __init__.py  base.py  memory.py  migration.py  mongodb.py  mysql.py  postgresql.py  redis.py  schema.py  sqlite.py
src/gravtory/cli/: __init__.py  main.py
src/gravtory/contrib/: __init__.py  fastapi.py
src/gravtory/core/: __init__.py  checkpoint.py  context.py  dag.py  dynamic.py  engine.py  errors.py  execution.py  id_template.py  lazy.py  parallel.py  registry.py  retention.py  retry.py  saga.py  types.py
src/gravtory/dashboard/: __init__.py  api.py  server.py  service.py
src/gravtory/dashboard/static/: index.html  openapi.json
src/gravtory/decorators/: __init__.py  middleware.py  parallel.py  saga.py  schedule.py  signal.py  step.py  workflow.py
src/gravtory/enterprise/: __init__.py  admin.py  audit.py  dlq_manager.py  key_manager.py  middleware.py  versioning.py
src/gravtory/observability/: __init__.py  alerts.py  logging.py  metrics.py  tracing.py
src/gravtory/retry/: __init__.py  circuit_breaker.py  policies.py
src/gravtory/scheduling/: __init__.py  cron.py  engine.py  events.py  interval.py  leader.py  scheduler.py
src/gravtory/serialization/: __init__.py  compression.py  encryption.py  json.py  msgpack.py  pickle.py  serializer.py
src/gravtory/signals/: __init__.py  _serde.py  handler.py  manager.py  transport.py
src/gravtory/testing/: __init__.py  introspection.py  mocks.py  runner.py  time_travel.py
src/gravtory/workers/: __init__.py  distributed.py  health.py  local.py  pool.py  rate_limit.py
tests/: conftest.py
tests/benchmarks/: test_benchmarks.py  test_load.py
tests/chaos/: test_concurrent_integration.py  test_fault_injection.py  test_property_checkpoint.py
tests/e2e/: conftest.py  test_cli.py  test_full_lifecycle.py
tests/integration/: conftest.py  test_crash_recovery.py  test_gravtory_main.py  test_parallel_conditions.py  test_parallel_fanout.py  test_retry_dlq_saga.py  test_saga_compensation.py  test_scheduling.py  test_signal_workflow.py  test_signals_integration.py  test_workflow_lifecycle.py
tests/integration/test_backends/: test_backend_contract.py  test_shared.py  test_sqlite_specific.py
tests/load/: test_stress.py
tests/mutation/: README.md  baseline.py
tests/property/: test_cron_properties.py  test_dag_properties.py  test_serialization_fuzz.py  test_serialization_properties.py
tests/security/: test_security.py
tests/unit/: test_agent_patterns.py  test_alerts.py  test_audit_log.py  test_backend_new_methods.py  test_checkpoint.py  test_circuit_breaker.py  test_cli.py  test_cli_main.py  test_compression.py  test_concurrency_control.py  test_conditions.py  test_context.py  test_core_retry_reexport.py  test_coverage_gaps.py  test_cron.py  test_cron_advance_gaps.py  test_cron_gaps.py  test_dag.py  test_dashboard_api.py  test_dashboard_server.py  test_dashboard_server_gaps.py  test_decorators.py  test_distributed.py  test_dlq_management.py  test_docs.py  test_dynamic_workflow.py  test_encryption.py  test_enterprise_middleware_gaps.py  test_errors.py  test_events.py  test_events_bus_gaps.py  test_execution.py  test_execution_engine_gaps.py  test_gravtory_engine.py  test_id_template.py  test_imports.py  test_interval.py  test_introspection.py  test_key_manager.py  test_lazy.py  (+53 more)
